# bpmn-builder

./: .gitignore  Makefile  README.md  env.example
backend/: .flake8  Dockerfile  manage.py  mypy.ini  pyproject.toml
backend/application/api/: lifespan.py  main.py
backend/application/api/bpmn/: handlers.py  schemas.py
backend/application/api/health/: handlers.py
backend/application/api/pipeline/: handlers.py  schemas.py
backend/application/api/stt/: handlers.py  schemas.py
backend/application/api/ws/: handlers.py
backend/infra/brokers/: taskiq.py
backend/infra/database/: models.py
backend/infra/repository/: base.py
backend/logic/: __init__.py
backend/logic/services/: base.py  ollama.py  openai.py  xinference.py
backend/logic/tasks/: __init__.py  base.py  bpmn_create.py  bpmn_suggestions.py  stt.py  webm_convert.py
backend/migrations/: env.py
backend/settings/: config.py  consts.py  logging.py
backend/tests/: test_utils_retry.py
backend/utils/decorators/: retry.py
deploy/dev/: docker-compose.backend.yml  docker-compose.frontend.yml  docker-compose.infra.yml  docker-compose.ml.gpu.yml  docker-compose.ml.yml
frontend/: Dockerfile  index.html  netlify.toml  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/nginx/: nginx.conf
frontend/src/: App.tsx  index.css
frontend/src/components/: BpmnViewer.tsx  ErrorsAndSuggestions.tsx  ProcessInputForm.tsx
frontend/src/contexts/: BpmnContext.tsx  SocketContext.tsx
frontend/src/types/: bpmn-js.d.ts  index.ts
scripts/: makefile-help.sh  wait-for-it.sh
